--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,11 @@
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+}
+
 html {
     font-size: 62.5%; // 1rem is 10px
 }
@@ -8,17 +16,18 @@ html {
     margin: 0;
     padding: 0;
     box-sizing: inherit;
-    font-family: 'montserrat';
 }
 
 body {
     overflow-x: hidden;
     font-weight: normal;
-
+    
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-rendering: optimizeLegibility;
     -webkit-tap-highlight-color: transparent;
+    font-family: "Open Sans";
+    color: #808080;
 }
 
 .app {
@@ -26,3 +35,11 @@ body {
     display: grid;
     justify-items: center;
 }
+
+@import 'layout';
+@import 'header_navbar';
+@import 'auth/sign_in';
+@import 'auth/sign_up';
+@import 'page_title';
+@import 'form_fields';
+@import 'details';
