finalized initial sign up page

--- a/src/style/form_fields.scss
+++ b/src/style/form_fields.scss
@@ -33,5 +33,12 @@
         &:focus {
             outline: none;
         }
+
+    }
+    
+    
+    &__gray-button {
+        background-color: #999999;
+        width: 137px;
     }
 }
