updated purchases page

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -43,3 +43,6 @@ body {
 @import 'page_title';
 @import 'form_fields';
 @import 'details';
+@import 'account/purchase-history';
+@import 'account/account-information';
+@import 'account/account';
