created store and cart features

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -55,3 +55,13 @@ body {
 // SHOP
 
 @import 'shop/shop';
+@import 'shop/shop-search-bar';
+@import 'shop/shop-product';
+
+// CART
+@import 'shop/shop-cart';
+@import 'shop/cart-product';
+
+// QUANTITY
+@import 'quantity';
+@import 'green-price-tag';
