finished payment information page

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -68,3 +68,8 @@ body {
 @import 'order/review';
 @import 'order/reviewForm';
 @import 'order/reviewProduct';
+
+// Information
+@import 'information/payment';
+@import 'information/shipping';
+@import 'information/infoHelp';
